# phys

./: CMakeLists.txt  compile_commands.json
include/: branch_scheme.h  defines.h  macros.h  vecmath.h
res/: CMakeLists.txt  test.txt  test6.txt
res/tex/: circuitikz.sty
src/: BranchScheme.h  branch_scheme.c  config.h  main.c  pch.h  scheme.h
src/math/: matrix.c  vector.c
src/scheme/: branch_scheme.c  calculation.c
